# hesperbots

./: .gitignore  Cargo.toml
src/: handler.rs  main.rs  user.rs
src/collections/: channels.rs  mod.rs  roles.rs  users.rs
src/commands/: add_channel_to_db.rs  add_role_to_db.rs  help.rs  list.rs  mod.rs
src/components/: mod.rs  verbutton.rs
src/functions/: calculate_xp_for_level.rs  mod.rs  reply.rs
src/handlers/: main_handler.rs  mod.rs  ranks_handler.rs
src/queries/: get_channel.sql  get_channels_by_guild.sql  get_role.sql  get_roles_by_guild.sql  get_user.sql  insert_user.sql  update_user.sql
