[package]
name = "hesperbots"
version = "0.1.0"
edition = "2024"

[dependencies]
bonsaidb = { version = "0.5.0", default-features = false, features = [
    "local",
    "async",
] }
tokio = { version = "1.50.0", default-features = false, features = [
    "rt-multi-thread",
    "fs",
    "io-util",
    "sync",
] }
serde = { version = "1.0.228", default-features = false, features = [
    "derive",
    "serde_derive",
    "std",
] }
serenity = { version = "0.12.5", default-features = false, features = [
    "builder",
    "cache",
    "collector",
    "client",
    "framework",
    "gateway",
    "simd_json",
    "temp_cache",
    "chrono",
    "interactions_endpoint",
    "rustls_backend",
    "http",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
