[package]
name = "hesperbots"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.52.1", default-features = false, features = [
    "rt-multi-thread",
    "fs",
    "io-util",
    "sync",
    "signal",
] }
serde = { version = "1.0.228", default-features = false, features = [
    "derive",
    "serde_derive",
    "std",
] }
serenity = { version = "0.12.5", default-features = false, features = [
    "builder",
    "cache",
    "collector",
    "client",
    "framework",
    "gateway",
    "simd_json",
    "temp_cache",
    "chrono",
    "interactions_endpoint",
    "rustls_backend",
    "http",
] }
tracing = { version = "0.1.44", default-features = false, features = ["std"] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = [
    "env-filter",
    "fmt",
    "std",
    "ansi",
] }
strum = { version = "0.28.0", default-features = false, features = [
    "derive",
    "strum_macros",
] }
sqlx = { version = "0.8.6", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls-ring",
    "postgres",
    "chrono",
    "macros",
    "uuid",
] }
clap = { version = "4.6.1", default-features = false, features = [
    "color",
    "derive",
    "env",
    "help",
    "std",
    "suggestions",
    "usage",
] }

[profile.release]
opt-level = 3
codegen-units = 1
panic = "abort"
